objects/MarketingFlyer__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FlyerImageName__c</fullName>
        <inlineHelpText>Upload a public static resource image &amp; give the name here</inlineHelpText>
        <label>Flyer Image Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MiniImageResourceUrl__c</fullName>
        <inlineHelpText>Name of static resource that will be used in</inlineHelpText>
        <label>Mini Image Resource Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedirectUrl__c</fullName>
        <label>Redirect Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Marketing Flyer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Marketing Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Flyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>